Updated app to use image upload via filestack. Working as expected.

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "latest",
     "angular-route": "latest",
     "angular-ui": "latest",
-    "bootstrap": "latest"
+    "bootstrap": "latest",
+    "angular-filepicker": "latest"
   }
 }
