Added mongo per error message.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "latest",
     "express-session": "latest",
     "method-override": "latest",
+    "mongodb": "^2.2.5",
     "mongoose": "latest",
     "morgan": "latest",
     "nodemailer": "latest",
