Another module error.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemailer": "latest",
     "passport": "latest",
     "passport-local": "latest",
-    "path": "latest"
+    "path": "latest",
+    "regexp-clone": "0.0.1"
   },
   "engines": {
     "node": "0.12.2"
