--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-flash": "latest",
     "express": "latest",
     "express-session": "latest",
+    "hooks-fixed": "^1.2.0",
     "kareem": "^1.1.3",
     "method-override": "latest",
     "mongodb": "^2.2.5",
