--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "latest",
     "morgan": "latest",
     "mpath": "^0.2.1",
+    "mpromise": "^0.5.5",
     "ms": "^0.7.1",
     "nodemailer": "latest",
     "passport": "latest",
