--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "hooks-fixed": "^1.2.0",
     "kareem": "^1.1.3",
     "method-override": "latest",
+    "mongodb": "^2.2.5",
     "mongoose": "latest",
     "morgan": "latest",
     "mpath": "^0.2.1",
-    "mpromise": "^0.5.5",
     "ms": "^0.7.1",
     "nodemailer": "latest",
     "passport": "latest",
