--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /node_modules
 /resources
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
