Added another missing dependency.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "latest",
     "passport": "latest",
     "passport-local": "latest",
-    "path": "latest"
+    "path": "latest",
+    "path-to-regexp": "^1.5.3"
   },
   "engines": {
     "node": "0.12.2"
