--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "finalhandler": "^0.5.0",
     "merge-descriptors": "^1.0.1",
     "method-override": "latest",
+    "methods": "^1.1.2",
     "mongoose": "latest",
     "morgan": "latest",
     "nodemailer": "latest",
