--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bson": "^0.5.2",
     "connect-flash": "latest",
     "debug": "^2.2.0",
+    "depd": "^1.1.0",
     "express": "latest",
     "express-session": "latest",
     "finalhandler": "^0.5.0",
