--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "latest",
     "morgan": "latest",
     "nodemailer": "latest",
+    "parseurl": "^1.3.1",
     "passport": "latest",
     "passport-local": "latest",
     "path": "latest",
