--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bson": "^0.5.2",
     "connect-flash": "latest",
     "content-disposition": "^0.5.1",
+    "content-type": "^1.0.2",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "express": "latest",
