--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "path": "latest",
     "path-to-regexp": "^1.5.3",
     "qs": "^6.2.1",
+    "send": "^0.14.1",
     "utils-merge": "^1.0.0"
   },
   "engines": {
