--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "content-type": "^1.0.2",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
+    "etag": "^1.7.0",
     "express": "latest",
     "express-session": "latest",
     "finalhandler": "^0.5.0",
