Added range parser.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path-to-regexp": "^1.5.3",
     "proxy-addr": "^1.1.2",
     "qs": "^6.2.1",
+    "range-parser": "^1.2.0",
     "send": "^0.14.1",
     "type-is": "^1.6.13",
     "utils-merge": "^1.0.0"
