--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "content-type": "^1.0.2",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
+    "encodeurl": "^1.0.1",
     "etag": "^1.7.0",
     "express": "latest",
     "express-session": "latest",
