--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "encodeurl": "^1.0.1",
+    "escape-html": "^1.0.3",
     "etag": "^1.7.0",
     "express": "latest",
     "express-session": "latest",
