--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "latest",
     "morgan": "latest",
     "nodemailer": "latest",
+    "on-finished": "^2.3.0",
     "parseurl": "^1.3.1",
     "passport": "latest",
     "passport-local": "latest",
