--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "accepts": "^1.3.3",
     "array-flatten": "^2.1.0",
+    "basic-auth": "^1.0.4",
     "bcrypt-nodejs": "latest",
     "body-parser": "latest",
     "bson": "^0.5.2",
