--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "latest",
     "nodemailer": "latest",
     "on-finished": "^2.3.0",
+    "on-headers": "^1.0.1",
     "parseurl": "^1.3.1",
     "passport": "latest",
     "passport-local": "latest",
