--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt-nodejs": "latest",
     "body-parser": "latest",
     "bson": "^0.5.2",
+    "bytes": "^2.4.0",
     "connect-flash": "latest",
     "content-disposition": "^0.5.1",
     "content-type": "^1.0.2",
