--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "latest",
     "finalhandler": "^0.5.0",
     "fresh": "^0.3.0",
+    "http-errors": "^1.5.0",
     "merge-descriptors": "^1.0.1",
     "method-override": "latest",
     "methods": "^1.1.2",
