--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "proxy-addr": "^1.1.2",
     "qs": "^6.2.1",
     "range-parser": "^1.2.0",
+    "raw-body": "^2.1.7",
     "send": "^0.14.1",
     "serve-static": "^1.11.1",
     "type-is": "^1.6.13",
