--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "finalhandler": "^0.5.0",
     "fresh": "^0.3.0",
     "http-errors": "^1.5.0",
+    "iconv-lite": "^0.4.13",
     "merge-descriptors": "^1.0.1",
     "method-override": "latest",
     "methods": "^1.1.2",
